feat: 위시리스트 기능 수정 및 전역 예외처리 추가