@@ -1,22 +1,19 @@
 package com.nhnacademy.bookstoreback.wishlist.service.impl;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import com.nhnacademy.bookstoreback.book.domain.entity.Book;
+import com.nhnacademy.bookstoreback.book.exception.BookNotFoundException;
 import com.nhnacademy.bookstoreback.book.repository.BookRepository;
-import com.nhnacademy.bookstoreback.global.exception.NotFoundException;
-import com.nhnacademy.bookstoreback.global.exception.payload.ErrorStatus;
 import com.nhnacademy.bookstoreback.user.domain.entity.User;
+import com.nhnacademy.bookstoreback.user.exception.UserNotFoundException;
 import com.nhnacademy.bookstoreback.user.repository.UserRepository;
 import com.nhnacademy.bookstoreback.wishlist.domain.dto.request.CreateWishListRequest;
-import com.nhnacademy.bookstoreback.wishlist.domain.dto.response.CreateWishListResponse;
 import com.nhnacademy.bookstoreback.wishlist.domain.dto.response.GetWishListResponse;
 import com.nhnacademy.bookstoreback.wishlist.domain.entity.WishList;
+import com.nhnacademy.bookstoreback.wishlist.exception.WishListAlreadyExistsException;
 import com.nhnacademy.bookstoreback.wishlist.repository.WishListRepository;
 import com.nhnacademy.bookstoreback.wishlist.service.WishListService;
 
@@ -31,35 +28,24 @@ public class WishListServiceImpl implements WishListService {
 
 	@Override
 	public List<GetWishListResponse> getWishLists(Long userId) {
-		List<WishList> wishLists = wishListRepository.findAllByUserId(userId);
-		return wishLists.stream()
-			.map(wishList -> GetWishListResponse.builder()
-				.bookId(wishList.getBook().getBookId())
-				.build())
-			.collect(Collectors.toList());
+		return wishListRepository.findAllByUserId(userId).stream()
+			.map(GetWishListResponse::fromEntity)
+			.toList();
 	}
 
 	@Override
-	public CreateWishListResponse createWishList(CreateWishListRequest request) {
-		Book book = bookRepository.findById(request.bookId()).orElseThrow(() -> {
-			String errorMessage = String.format("해당 도서 '%s'는 존재하지 않는 도서입니다.", request.bookId());
-			ErrorStatus errorStatus = ErrorStatus.from(errorMessage, HttpStatus.NOT_FOUND, LocalDateTime.now());
-			return new NotFoundException(errorStatus);
-		});
+	public void createWishList(Long userId, CreateWishListRequest request) {
+		Book book = bookRepository.findById(request.bookId())
+			.orElseThrow(() -> new BookNotFoundException(request.bookId()));
 
-		User user = userRepository.findById(request.userId()).orElseThrow(() -> {
-			String errorMessage = String.format("해당 회원 '%s'는 존재하지 않는 회원입니다.", request.bookId());
-			ErrorStatus errorStatus = ErrorStatus.from(errorMessage, HttpStatus.NOT_FOUND, LocalDateTime.now());
-			return new NotFoundException(errorStatus);
-		});
+		User user = userRepository.findById(userId)
+			.orElseThrow(() -> new UserNotFoundException(userId));
 
-		WishList wishList = new WishList(book, user);
-		wishListRepository.save(wishList);
+		if (wishListRepository.existsByUserIdAndBookBookId(userId, book.getBookId())) {
+			throw new WishListAlreadyExistsException(book.getBookId());
+		}
 
-		return CreateWishListResponse.builder()
-			.bookId(book.getBookId())
-			.userId(user.getId())
-			.build();
+		wishListRepository.save(new WishList(book, user));
 	}
 
 	@Override
